hphp/hack/test/typecheck/function_pointer/final_self.php.rust_elab.exp
File "final_self.php", line 16, characters 5-8:
Cannot use `self::` in a function pointer in a non-final class due to class context ambiguity. Consider using `Foo::foo` instead (Naming[2113])
